# lightcloud

./: .gitignore  client.py  pyproject.toml
examples/: client.py  upload_content.py  upload_file.py
lightcloud/: const.py  main.py
lightcloud/api/: utils.py
lightcloud/api/controllers/: download_file.py  download_router.py  hash_router.py  upload_file.py  upload_router.py
lightcloud/api/endpoints/: download_router.py  hash_router.py
lightcloud/api/middleware/: token_auth.py
lightcloud/client/: client.py  downloader.py  uploader.py
lightcloud/client/transformers/: encription.py  transformer.py
lightcloud/domain/: storage.py
lightcloud/server/: main.py
lightcloud/server/api/: utils.py
lightcloud/server/api/endpoints/: download_router.py  hash_router.py  upload_router.py
lightcloud_client/: client.py  downloader.py  uploader.py
lightcloud_client/transformers/: encription.py  transformer.py
