[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "lightcloud"
version = '0.0.1'
description = ""
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Зорин Никита Евгеньевич", email = "nikita00zorinnn@mail.ru" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Typing :: Typed",
]
dependencies = [
    "fastapi==0.109.2",
    "pydantic==2.6.1",
    "python-multipart==0.0.9",
    "httpx==0.26.0",
    "numpy==1.26.4",
]


[project.optional-dependencies]
dev = [
    "pytest~=8.3",
    "mypy~=1.11",
    "mypy-extensions~=1.0",
]

[tool.mypy]
strict = true

[tool.pytest.ini_options]
addopts = [
    "--strict-config",
    "--strict-markers",
]